--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="index.css" type="html/css" />
+    <link rel="stylesheet" type="html/css" href="./index.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
